INCLUDES = \
	-I$(top_builddir)	\
	$(VINAGRE_CFLAGS)	\
	$(GTKVNC_CFLAGS)

noinst_LTLIBRARIES = libgtkvnc.la

libgtkvnc_la_SOURCES =	\
	blt.h		\
	blt1.h		\
	continuation.c	\
	continuation.h	\
	coroutine.c	\
	coroutine.h	\
	d3des.c		\
	d3des.h		\
	gvnc.c		\
	gvnc.h		\
	vncdisplay.c	\
	vncdisplay.h	\
	vncshmimage.c	\
	vncshmimage.h

